patito/src/syntax/analyzer/PatitoParser.py
# Generated from Patito.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PatitoParser ( Parser ):

    grammarFileName = "Patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "'inicio'", "'entero'", 
                     "'flotante'", "'var'", "'escribe'", "'mientras'", "'haz'", 
                     "'sino'", "'fin'", "'nula'", "'si'", "'>'", "'<'", 
                     "'!='", "'=='", "'+'", "'-'", "'*'", "'/'", "'='", 
                     "';'", "'('", "')'", "':'", "','", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "PROGRAMA", "INICIO", "ENTERO", "FLOTANTE", 
                      "VAR", "ESCRIBE", "MIENTRAS", "HAZ", "SINO", "FIN", 
                      "NULA", "SI", "MAYOR_A", "MENOR_A", "INIGUALDAD", 
                      "IGUALDAD", "SUMA", "RESTA", "MULTIPLICACION", "DIVISION", 
                      "ASIGNACION", "PUNTO_COMA", "PARENTESIS_APER", "PARENTESIS_CLAU", 
                      "DOS_PUNTOS", "COMA", "CORCHETE_APER", "CORCHETE_CLAU", 
                      "ID", "LETRERO", "CTE_ENT", "CTE_FLOT", "WS" ]

    RULE_programa = 0
    RULE_var = 1
    RULE_opc_var = 2
    RULE_extension_var = 3
    RULE_cuerpo = 4
    RULE_estatuto = 5
    RULE_opc_lista_estatuto = 6
    RULE_imprime = 7
    RULE_expresion_o_letrero = 8
    RULE_lista_expresion_o_letrero = 9
    RULE_lista_expresion_o_letrero_1 = 10
    RULE_asigna = 11
    RULE_ciclo = 12
    RULE_expresion = 13
    RULE_opc_operador_relacional_expresion = 14
    RULE_lista_expresion = 15
    RULE_lista_expresion_1 = 16
    RULE_opc_lista_expresion = 17
    RULE_exp = 18
    RULE_termino = 19
    RULE_lista_termino = 20
    RULE_lista_termino_1 = 21
    RULE_factor = 22
    RULE_lista_factor = 23
    RULE_lista_factor_1 = 24
    RULE_tipo = 25
    RULE_lista_id = 26
    RULE_lista_id_1 = 27
    RULE_id_tipo = 28
    RULE_lista_id_tipo = 29
    RULE_lista_id_tipo_1 = 30
    RULE_opc_lista_id_tipo = 31
    RULE_func = 32
    RULE_opc_lista_func = 33
    RULE_llamada = 34
    RULE_cte = 35
    RULE_condicion = 36
    RULE_opc_sino = 37
    RULE_operador_relacional = 38
    RULE_suma_o_resta = 39
    RULE_opc_suma_o_resta = 40
    RULE_multiplicacion_o_division = 41
    RULE_id_o_cte = 42

    ruleNames =  [ "programa", "var", "opc_var", "extension_var", "cuerpo", 
                   "estatuto", "opc_lista_estatuto", "imprime", "expresion_o_letrero", 
                   "lista_expresion_o_letrero", "lista_expresion_o_letrero_1", 
                   "asigna", "ciclo", "expresion", "opc_operador_relacional_expresion", 
                   "lista_expresion", "lista_expresion_1", "opc_lista_expresion", 
                   "exp", "termino", "lista_termino", "lista_termino_1", 
                   "factor", "lista_factor", "lista_factor_1", "tipo", "lista_id", 
                   "lista_id_1", "id_tipo", "lista_id_tipo", "lista_id_tipo_1", 
                   "opc_lista_id_tipo", "func", "opc_lista_func", "llamada", 
                   "cte", "condicion", "opc_sino", "operador_relacional", 
                   "suma_o_resta", "opc_suma_o_resta", "multiplicacion_o_division", 
                   "id_o_cte" ]

    EOF = Token.EOF
    PROGRAMA=1
    INICIO=2
    ENTERO=3
    FLOTANTE=4
    VAR=5
    ESCRIBE=6
    MIENTRAS=7
    HAZ=8
    SINO=9
    FIN=10
    NULA=11
    SI=12
    MAYOR_A=13
    MENOR_A=14
    INIGUALDAD=15
    IGUALDAD=16
    SUMA=17
    RESTA=18
    MULTIPLICACION=19
    DIVISION=20
    ASIGNACION=21
    PUNTO_COMA=22
    PARENTESIS_APER=23
    PARENTESIS_CLAU=24
    DOS_PUNTOS=25
    COMA=26
    CORCHETE_APER=27
    CORCHETE_CLAU=28
    ID=29
    LETRERO=30
    CTE_ENT=31
    CTE_FLOT=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(PatitoParser.PROGRAMA, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def PUNTO_COMA(self):
            return self.getToken(PatitoParser.PUNTO_COMA, 0)

        def opc_var(self):
            return self.getTypedRuleContext(PatitoParser.Opc_varContext,0)


        def opc_lista_func(self):
            return self.getTypedRuleContext(PatitoParser.Opc_lista_funcContext,0)


        def INICIO(self):
            return self.getToken(PatitoParser.INICIO, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(PatitoParser.CuerpoContext,0)


        def FIN(self):
            return self.getToken(PatitoParser.FIN, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = PatitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(PatitoParser.PROGRAMA)
            self.state = 87
            self.match(PatitoParser.ID)
            self.state = 88
            self.match(PatitoParser.PUNTO_COMA)
            self.state = 89
            self.opc_var()
            self.state = 90
            self.opc_lista_func()
            self.state = 91
            self.match(PatitoParser.INICIO)
            self.state = 92
            self.cuerpo()
            self.state = 93
            self.match(PatitoParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(PatitoParser.VAR, 0)

        def lista_id(self):
            return self.getTypedRuleContext(PatitoParser.Lista_idContext,0)


        def DOS_PUNTOS(self):
            return self.getToken(PatitoParser.DOS_PUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(PatitoParser.TipoContext,0)


        def PUNTO_COMA(self):
            return self.getToken(PatitoParser.PUNTO_COMA, 0)

        def extension_var(self):
            return self.getTypedRuleContext(PatitoParser.Extension_varContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = PatitoParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(PatitoParser.VAR)
            self.state = 96
            self.lista_id()
            self.state = 97
            self.match(PatitoParser.DOS_PUNTOS)
            self.state = 98
            self.tipo()
            self.state = 99
            self.match(PatitoParser.PUNTO_COMA)
            self.state = 100
            self.extension_var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opc_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(PatitoParser.VarContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_opc_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpc_var" ):
                listener.enterOpc_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpc_var" ):
                listener.exitOpc_var(self)




    def opc_var(self):

        localctx = PatitoParser.Opc_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_opc_var)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.var()
                pass
            elif token in [2, 11, 27]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Extension_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lista_id(self):
            return self.getTypedRuleContext(PatitoParser.Lista_idContext,0)


        def DOS_PUNTOS(self):
            return self.getToken(PatitoParser.DOS_PUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(PatitoParser.TipoContext,0)


        def PUNTO_COMA(self):
            return self.getToken(PatitoParser.PUNTO_COMA, 0)

        def extension_var(self):
            return self.getTypedRuleContext(PatitoParser.Extension_varContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_extension_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtension_var" ):
                listener.enterExtension_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtension_var" ):
                listener.exitExtension_var(self)




    def extension_var(self):

        localctx = PatitoParser.Extension_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_extension_var)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.lista_id()
                self.state = 107
                self.match(PatitoParser.DOS_PUNTOS)
                self.state = 108
                self.tipo()
                self.state = 109
                self.match(PatitoParser.PUNTO_COMA)
                self.state = 110
                self.extension_var()
                pass
            elif token in [2, 11, 27]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CORCHETE_APER(self):
            return self.getToken(PatitoParser.CORCHETE_APER, 0)

        def opc_lista_estatuto(self):
            return self.getTypedRuleContext(PatitoParser.Opc_lista_estatutoContext,0)


        def CORCHETE_CLAU(self):
            return self.getToken(PatitoParser.CORCHETE_CLAU, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)




    def cuerpo(self):

        localctx = PatitoParser.CuerpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cuerpo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(PatitoParser.CORCHETE_APER)
            self.state = 116
            self.opc_lista_estatuto()
            self.state = 117
            self.match(PatitoParser.CORCHETE_CLAU)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asigna(self):
            return self.getTypedRuleContext(PatitoParser.AsignaContext,0)


        def condicion(self):
            return self.getTypedRuleContext(PatitoParser.CondicionContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(PatitoParser.CicloContext,0)


        def llamada(self):
            return self.getTypedRuleContext(PatitoParser.LlamadaContext,0)


        def imprime(self):
            return self.getTypedRuleContext(PatitoParser.ImprimeContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)




    def estatuto(self):

        localctx = PatitoParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_estatuto)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.asigna()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.condicion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.ciclo()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.llamada()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 123
                self.imprime()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opc_lista_estatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(PatitoParser.EstatutoContext,0)


        def opc_lista_estatuto(self):
            return self.getTypedRuleContext(PatitoParser.Opc_lista_estatutoContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_opc_lista_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpc_lista_estatuto" ):
                listener.enterOpc_lista_estatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpc_lista_estatuto" ):
                listener.exitOpc_lista_estatuto(self)




    def opc_lista_estatuto(self):

        localctx = PatitoParser.Opc_lista_estatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_opc_lista_estatuto)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 7, 12, 29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.estatuto()
                self.state = 127
                self.opc_lista_estatuto()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCRIBE(self):
            return self.getToken(PatitoParser.ESCRIBE, 0)

        def PARENTESIS_APER(self):
            return self.getToken(PatitoParser.PARENTESIS_APER, 0)

        def lista_expresion_o_letrero(self):
            return self.getTypedRuleContext(PatitoParser.Lista_expresion_o_letreroContext,0)


        def PARENTESIS_CLAU(self):
            return self.getToken(PatitoParser.PARENTESIS_CLAU, 0)

        def PUNTO_COMA(self):
            return self.getToken(PatitoParser.PUNTO_COMA, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_imprime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprime" ):
                listener.enterImprime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprime" ):
                listener.exitImprime(self)




    def imprime(self):

        localctx = PatitoParser.ImprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_imprime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(PatitoParser.ESCRIBE)
            self.state = 133
            self.match(PatitoParser.PARENTESIS_APER)
            self.state = 134
            self.lista_expresion_o_letrero()
            self.state = 135
            self.match(PatitoParser.PARENTESIS_CLAU)
            self.state = 136
            self.match(PatitoParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expresion_o_letreroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def LETRERO(self):
            return self.getToken(PatitoParser.LETRERO, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_expresion_o_letrero

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion_o_letrero" ):
                listener.enterExpresion_o_letrero(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion_o_letrero" ):
                listener.exitExpresion_o_letrero(self)




    def expresion_o_letrero(self):

        localctx = PatitoParser.Expresion_o_letreroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expresion_o_letrero)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17, 18, 23, 29, 31, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.expresion()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(PatitoParser.LETRERO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_expresion_o_letreroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion_o_letrero(self):
            return self.getTypedRuleContext(PatitoParser.Expresion_o_letreroContext,0)


        def lista_expresion_o_letrero_1(self):
            return self.getTypedRuleContext(PatitoParser.Lista_expresion_o_letrero_1Context,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_lista_expresion_o_letrero

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_expresion_o_letrero" ):
                listener.enterLista_expresion_o_letrero(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_expresion_o_letrero" ):
                listener.exitLista_expresion_o_letrero(self)




    def lista_expresion_o_letrero(self):

        localctx = PatitoParser.Lista_expresion_o_letreroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lista_expresion_o_letrero)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.expresion_o_letrero()
            self.state = 143
            self.lista_expresion_o_letrero_1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_expresion_o_letrero_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(PatitoParser.COMA, 0)

        def expresion_o_letrero(self):
            return self.getTypedRuleContext(PatitoParser.Expresion_o_letreroContext,0)


        def lista_expresion_o_letrero_1(self):
            return self.getTypedRuleContext(PatitoParser.Lista_expresion_o_letrero_1Context,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_lista_expresion_o_letrero_1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_expresion_o_letrero_1" ):
                listener.enterLista_expresion_o_letrero_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_expresion_o_letrero_1" ):
                listener.exitLista_expresion_o_letrero_1(self)




    def lista_expresion_o_letrero_1(self):

        localctx = PatitoParser.Lista_expresion_o_letrero_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_lista_expresion_o_letrero_1)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(PatitoParser.COMA)
                self.state = 146
                self.expresion_o_letrero()
                self.state = 147
                self.lista_expresion_o_letrero_1()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def ASIGNACION(self):
            return self.getToken(PatitoParser.ASIGNACION, 0)

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def PUNTO_COMA(self):
            return self.getToken(PatitoParser.PUNTO_COMA, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_asigna

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsigna" ):
                listener.enterAsigna(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsigna" ):
                listener.exitAsigna(self)




    def asigna(self):

        localctx = PatitoParser.AsignaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_asigna)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(PatitoParser.ID)
            self.state = 153
            self.match(PatitoParser.ASIGNACION)
            self.state = 154
            self.expresion()
            self.state = 155
            self.match(PatitoParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS(self):
            return self.getToken(PatitoParser.MIENTRAS, 0)

        def PARENTESIS_APER(self):
            return self.getToken(PatitoParser.PARENTESIS_APER, 0)

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def PARENTESIS_CLAU(self):
            return self.getToken(PatitoParser.PARENTESIS_CLAU, 0)

        def HAZ(self):
            return self.getToken(PatitoParser.HAZ, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(PatitoParser.CuerpoContext,0)


        def PUNTO_COMA(self):
            return self.getToken(PatitoParser.PUNTO_COMA, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_ciclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCiclo" ):
                listener.enterCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCiclo" ):
                listener.exitCiclo(self)




    def ciclo(self):

        localctx = PatitoParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ciclo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(PatitoParser.MIENTRAS)
            self.state = 158
            self.match(PatitoParser.PARENTESIS_APER)
            self.state = 159
            self.expresion()
            self.state = 160
            self.match(PatitoParser.PARENTESIS_CLAU)
            self.state = 161
            self.match(PatitoParser.HAZ)
            self.state = 162
            self.cuerpo()
            self.state = 163
            self.match(PatitoParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(PatitoParser.ExpContext,0)


        def opc_operador_relacional_expresion(self):
            return self.getTypedRuleContext(PatitoParser.Opc_operador_relacional_expresionContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = PatitoParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expresion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.exp()
            self.state = 166
            self.opc_operador_relacional_expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opc_operador_relacional_expresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operador_relacional(self):
            return self.getTypedRuleContext(PatitoParser.Operador_relacionalContext,0)


        def exp(self):
            return self.getTypedRuleContext(PatitoParser.ExpContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_opc_operador_relacional_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpc_operador_relacional_expresion" ):
                listener.enterOpc_operador_relacional_expresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpc_operador_relacional_expresion" ):
                listener.exitOpc_operador_relacional_expresion(self)




    def opc_operador_relacional_expresion(self):
